Bug 364422 - Resource size should include its dependencies
Summary: Resource size should include its dependencies
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: 5.6.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 295290 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-17 14:52 UTC by Harald Sitter
Modified: 2017-11-08 18:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2016-06-17 14:52:47 UTC
So. I am on neon and I want to install libreoffice impress. So I search for libreoffice which sure enough turns up impress. It also has a handy box telling me the size of impress, which is 900kb. So that's awesome.

BUT

That's only the size of the actual package containing the impress appdata! This does not include the dependencies that would be dragged in. And those are substantial... 

Upon attempting to install it via apt:
> Need to get 60,1 MB of archives.
> After this operation, 221 MB of additional disk space will be used.




Reproducible: Always

Steps to Reproduce:
1. don't have libreoffice installed
2. look for libreoffice in discover
3.

Actual Results:  
Estimate has a 6000% margin of error

Expected Results:  
Estimate should have a margin of error less than 100%

Ideally I'd imagine that the dependencies need to be taking into account for starters.

(there's also a problem due to the async transaction nature of discover where a user could install impress and then while that is happening also considers installing writer, which would now still show 60mib footprint although its footprint effectively would be 2mib once the impress transaction finishes, not sure that is worth considering for now though)
Comment 1 Aleix Pol 2016-09-14 10:51:34 UTC
I'm unsure how to get this one right with apt. The data is not available in PackageKit altogether.
Comment 2 Nate Graham 2017-10-19 21:43:30 UTC
Is there an upstream bug report requesting dependency size information from PackageKit?
Comment 3 Aleix Pol 2017-11-08 15:24:54 UTC
Git commit 0cc8edb1c9771bc4998ac9995f153282dc360bf1 by Aleix Pol.
Committed on 08/11/2017 at 15:20.
Pushed by apol into branch 'master'.

Include the number of dependencies an application will have to install

Together with the size of the package itself.
To show the full size we'd have to resolve them separately and for now
I'm afraid it would collapse PackageKit in some implementations.

M  +20   -0    libdiscover/backends/PackageKitBackend/PackageKitResource.cpp
M  +3    -0    libdiscover/backends/PackageKitBackend/PackageKitResource.h

https://commits.kde.org/discover/0cc8edb1c9771bc4998ac9995f153282dc360bf1
Comment 4 Aleix Pol 2017-11-08 15:25:43 UTC
Here's an approach, please confirm if it's useful or not. I'd say it's closer to what we need at least.
Comment 5 Nate Graham 2017-11-08 18:05:46 UTC
*** Bug 383514 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2017-11-08 18:06:10 UTC
*** Bug 295290 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2017-11-08 18:24:21 UTC
Here's the upstream feature request to include dependency sizes, FWIW: https://bugs.freedesktop.org/show_bug.cgi?id=19071

Although some limited form of it might have already been implemented, according to https://bugs.freedesktop.org/show_bug.cgi?id=15518