Include the number of dependencies an application will have to install

Together with the size of the package itself.
To show the full size we'd have to resolve them separately and for now
I'm afraid it would collapse PackageKit in some implementations.

BUG: 364422